updated + junit